cc: fix pixel-moving filter effects on a rotated layer.

When a pixel-moving filter (e.g. blur, drop-shadow) is applied to a
transformed layer, we were leaving the edge equations used for edge-AA
at the original primitive's position, causing them to truncate the
effect (e.g., blur margins).

This fix detects that AA is required on a filter that changes the
bounds, disables edge-AA and bloats the boundaries by an extra pixel
instead.

This revealed that we were drawing the filtered result with NEAREST
filtering (!), causing some nasty jaggies when rotated. This was fixed by
manually setting the min and mag filters to LINEAR.

It also revealed that the software renderer was not
applying filter outsets. The GL renderer was previously
fixed here: https://codereview.chromium.org/1517693002. This
CL makes similar changes to the software renderer.

BUG=607831
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/1942863002
Cr-Commit-Position: refs/heads/master@{#391332}

Former-commit-id: c2061a305a361ebda94b0e46e80a69846b875cc5